Increase the font size

--- a/import/add.html
+++ b/import/add.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <form style="border:1px solid white; border-radius: 10px; padding: 20px;
-    margin-top: 150px;margin-left: 500px; font-weight: 600; width: 14%;
+    margin-top: 150px;margin-left: 500px; font-weight: 600; width: 14%; font-size:20px;
     background-color: tomato; color: #fff;" method="post" enctype="multipart/form-data" action="add.php">
         <input type="file" name="doc"/></br></br>
         <input type="submit" name="submit"/>
